@@ -34,6 +34,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -108,7 +109,7 @@ public class FileManagementProtocolTest {
         // In here, we must check that the protocol will subscribe to each and every topic
         String clientId = "test-client-id";
         doReturn(clientId).when(clientMock).getClientId();
-        final int requiredTopics = 9;
+        final int requiredTopics = 8;
 
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
@@ -132,7 +133,7 @@ public class FileManagementProtocolTest {
         protocol.publishFileList();
 
         // Verify all the mock calls
-        verify(clientMock, times(1)).getClientId();
+        verify(clientMock, times(0)).getClientId();
     }
 
     @Test
@@ -391,12 +392,9 @@ public class FileManagementProtocolTest {
 
         // Do the call
         protocol.handleFileTransferInitiation(
-                FileManagementProtocol.FILE_UPLOAD_INITIATE + clientMock.getClientId(), testMessage);
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_INITIATE, testMessage);
 
-        // Create the abort message
-        FileAbort testAbortMessage = new FileAbort();
-        testAbortMessage.setFileName("non-matching-name");
-        testMessage = new MqttMessage(JsonUtil.serialize(testAbortMessage));
+        testMessage = new MqttMessage(JsonUtil.serialize("non-matching-name"));
 
         // Do the abort
         protocol.handleFileTransferAbort(
@@ -425,16 +423,13 @@ public class FileManagementProtocolTest {
 
         // Do the call
         protocol.handleFileTransferInitiation(
-                FileManagementProtocol.FILE_UPLOAD_INITIATE + clientMock.getClientId(), testMessage);
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_INITIATE, testMessage);
 
-        // Create the abort message
-        FileAbort testAbortMessage = new FileAbort();
-        testAbortMessage.setFileName("test-file-message");
-        testMessage = new MqttMessage(JsonUtil.serialize(testAbortMessage));
+        testMessage = new MqttMessage(JsonUtil.serialize("test-file-message"));
 
         // Do the abort
         protocol.handleFileTransferAbort(
-                FileManagementProtocol.FILE_UPLOAD_ABORT + clientMock.getClientId(), testMessage);
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_ABORT, testMessage);
 
         // Sleep just a tad bit
         Thread.sleep(1000);
@@ -488,7 +483,7 @@ public class FileManagementProtocolTest {
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
         // Call the handler
-        protocol.handleFileTransferBinaryResponse(FileManagementProtocol.FILE_BINARY_RESPONSE + clientMock.getClientId(),
+        protocol.handleFileTransferBinaryResponse(FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_ABORT,
                 new MqttMessage(new byte[1001]));
 
         // Verify no publishes have been called
@@ -509,10 +504,10 @@ public class FileManagementProtocolTest {
 
         // Do the call
         protocol.handleFileTransferInitiation(
-                FileManagementProtocol.FILE_UPLOAD_INITIATE + clientMock.getClientId(), testMessage);
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_INITIATE, testMessage);
 
         // Call the handler
-        protocol.handleFileTransferBinaryResponse(FileManagementProtocol.FILE_BINARY_RESPONSE + clientMock.getClientId(),
+        protocol.handleFileTransferBinaryResponse(FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_ABORT,
                 new MqttMessage(new byte[1088]));
 
         // Sleep a tad bit
@@ -530,24 +525,26 @@ public class FileManagementProtocolTest {
 
         // Create the payload
         byte[] bytes = new byte[1088];
-        byte[] hash = DigestUtils.sha256(new byte[1024]);
-        for (int i = 0; i < hash.length; i++) {
-            bytes[bytes.length - hash.length + i] = hash[i];
+        byte[] actualBytes = new byte[1024];
+        byte[] hash = FileDownloadSession.calculateMD5HashForBytes(actualBytes);
+        byte[] byteHash = DigestUtils.sha256(actualBytes);
+        for (int i = 0; i < byteHash.length; i++) {
+            bytes[bytes.length - byteHash.length + i] = byteHash[i];
         }
 
         // Prepare the message
         FileInit testInitMessage = new FileInit();
         testInitMessage.setFileName("Test File");
         testInitMessage.setFileSize(1024);
-        testInitMessage.setFileHash(Base64.encodeBytes(hash));
+        testInitMessage.setFileHash(DatatypeConverter.printHexBinary(hash));
 
         // Do the calls
         protocol.handleFileTransferInitiation(
-                FileManagementProtocol.FILE_UPLOAD_INITIATE + clientMock.getClientId(),
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_INITIATE,
                 new MqttMessage(JsonUtil.serialize(testInitMessage)));
 
         protocol.handleFileTransferBinaryResponse(
-                FileManagementProtocol.FILE_BINARY_RESPONSE + clientMock.getClientId(),
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_BINARY_RESPONSE,
                 new MqttMessage(bytes));
 
         // Sleep a tad bit
@@ -569,24 +566,26 @@ public class FileManagementProtocolTest {
 
         // Create the payload
         byte[] bytes = new byte[1088];
-        byte[] hash = DigestUtils.sha256(new byte[1024]);
-        for (int i = 0; i < hash.length; i++) {
-            bytes[bytes.length - hash.length + i] = hash[i];
+        byte[] actualBytes = new byte[1024];
+        byte[] hash = FileDownloadSession.calculateMD5HashForBytes(actualBytes);
+        byte[] byteHash = DigestUtils.sha256(actualBytes);
+        for (int i = 0; i < byteHash.length; i++) {
+            bytes[bytes.length - byteHash.length + i] = byteHash[i];
         }
 
         // Prepare the message
         FileInit testInitMessage = new FileInit();
         testInitMessage.setFileName("Test File");
         testInitMessage.setFileSize(1024);
-        testInitMessage.setFileHash(Base64.encodeBytes(hash));
+        testInitMessage.setFileHash(DatatypeConverter.printHexBinary(hash));
 
         // Do the calls
         protocol.handleFileTransferInitiation(
-                FileManagementProtocol.FILE_UPLOAD_INITIATE + clientMock.getClientId(),
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_UPLOAD_INITIATE,
                 new MqttMessage(JsonUtil.serialize(testInitMessage)));
 
         protocol.handleFileTransferBinaryResponse(
-                FileManagementProtocol.FILE_BINARY_RESPONSE + clientMock.getClientId(),
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_ABORT,
                 new MqttMessage(bytes));
 
         // Sleep a tad bit
@@ -613,7 +612,7 @@ public class FileManagementProtocolTest {
 
         // Call the method
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
                 new MqttMessage(JsonUtil.serialize(urlInfo)));
 
         // Sleep for a tad bit
@@ -634,14 +633,10 @@ public class FileManagementProtocolTest {
         field.setAccessible(true);
         field.set(protocol, null);
 
-        // Prepare the test message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://test.url");
-
         // Call the method
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Sleep for a tad bit
         Thread.sleep(1000);
@@ -660,14 +655,10 @@ public class FileManagementProtocolTest {
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Prepare the test message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://test.url");
-
         // Call the method
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Sleep for a tad bit
         Thread.sleep(1000);
@@ -682,14 +673,10 @@ public class FileManagementProtocolTest {
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Prepare the test message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://test.url");
-
         // Call the method
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Sleep a tad bit
         Thread.sleep(1000);
@@ -709,14 +696,10 @@ public class FileManagementProtocolTest {
         field.setAccessible(true);
         field.set(protocol, null);
 
-        // Prepare the test message
-        UrlAbort urlAbort = new UrlAbort();
-        urlAbort.setFileUrl("https://test.url");
-
         // Call the method
         protocol.handleUrlDownloadAbort(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlAbort)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Sleep for a tad bit
         Thread.sleep(1000);
@@ -731,23 +714,15 @@ public class FileManagementProtocolTest {
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Prepare the init message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://proper.test.url");
-
         // Call the init
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
-
-        // Prepare the test message
-        UrlAbort urlAbort = new UrlAbort();
-        urlAbort.setFileUrl("https://notproper.test.url");
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://proper.test.url")));
 
         // Call the method
         protocol.handleUrlDownloadAbort(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlAbort)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://notproper.test.url")));
 
         // Sleep for a tad bit
         Thread.sleep(1000);
@@ -762,22 +737,14 @@ public class FileManagementProtocolTest {
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Prepare the init message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://test.url");
-
         // Call the init
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
-
-        // Prepare the abort message
-        UrlAbort urlAbort = new UrlAbort();
-        urlAbort.setFileUrl("https://test.url");
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Call the method
-        protocol.handleUrlDownloadAbort(FileManagementProtocol.FILE_URL_DOWNLOAD_ABORT + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlAbort)));
+        protocol.handleUrlDownloadAbort(FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_ABORT,
+                new MqttMessage(JsonUtil.serialize("https://test.url")));
 
         // Sleep for a tad bit
         Thread.sleep(1000);
@@ -839,14 +806,10 @@ public class FileManagementProtocolTest {
         // Setup the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Setup the test initialize message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://get.docker.com");
-
         // Pass the initialize message
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://get.docker.com")));
 
         // Wait for the results to show up
         Thread.sleep(1000);
@@ -865,14 +828,10 @@ public class FileManagementProtocolTest {
         // Setup the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Setup the test initialize message
-        UrlInfo urlInfo = new UrlInfo();
-        urlInfo.setFileUrl("https://get.docker.com");
-
         // Pass the initialize message
         protocol.handleUrlDownloadInitiation(
-                FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(urlInfo)));
+                FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_URL_DOWNLOAD_INITIATE,
+                new MqttMessage(JsonUtil.serialize("https://get.docker.com")));
 
         // Wait for the results to show up
         Thread.sleep(1000);
@@ -887,13 +846,9 @@ public class FileManagementProtocolTest {
         // Create the protocol
         protocol = new FileManagementProtocol(clientMock, managementMock);
 
-        // Create the test message
-        FileDelete delete = new FileDelete();
-        delete.setFileNames(Collections.singletonList("test-file"));
-
         // Call the method
-        protocol.handleFileDeletion(FileManagementProtocol.FILE_DELETE + clientMock.getClientId(),
-                new MqttMessage(JsonUtil.serialize(delete)));
+        protocol.handleFileDeletion(FileManagementProtocol.IN_DIRECTION + clientMock.getClientId() + FileManagementProtocol.FILE_DELETE,
+                new MqttMessage(JsonUtil.serialize(Collections.singletonList("test-file"))));
 
         // Sleep a tad bit
         Thread.sleep(1000);
